[fix] [modals] align content to right on footer.

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -310,8 +310,8 @@
 					}
 
 					// ALIGN: Right.
-					&-center {
-						justify-content: center;
+					&-right {
+						justify-content: flex-end;
 					}
 
 					// ALIGN: Separated (space between).
